Feature: Punto Prolog + Punto Historial de Visualizaciones